[metadata]
name = kabbes_google_forms
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = Helpful package for working with Google Forms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_google_forms
project_urls =
    GitHub = https://github.com/jameskabbes/google_forms
    Documentation = https://jameskabbes.github.io/google_forms
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src